# CServ

./: CMakeLists.txt  README.md
src/: globals.h  main.c
src/ArgumentHandler/: ArgumentHandler.c  ArgumentHandler.h
src/Receiver/: Receiver.c  Receiver.h
